# archi_panel

./: .gitignore  README.md  pyproject.toml
data/: classification_architectural_traits.csv  meteo.csv  weather.csv
data/real_plants/: SPAD_2022.csv  config.py  main_preprocess_meteo.py  meteo.csv  meteo_raw.csv
data/real_plants/digit/year_1/: affenthale_5853.csv  affenthale_5858.csv  ahmersalap_5198.csv  avarengo_6032.csv  avarengo_6036.csv  babicacr_6807.csv  belledenise_6683.csv  belledenise_6686.csv  chachoub_5930.csv  chachoub_5934.csv  chaptal_5686.csv  coarna_5666.csv  (+50 more)
example/: common.py  main_sim_single_pot.py  main_sim_twin_pots.py  params.json  sim.py
example/preprocessed_inputs/: dynamic.json  static.json
misc/: archi_panel.pptx  azimuth_plot.py
sa/: config.py  funcs.py  main_analysis.py  main_preprocess.py  main_process.py  mathilde_panel.csv  params.json
sa/weather_scenarios/: README.txt  main.py  weather_2019.csv  weather_extremely_hot.csv  weather_hot.csv  weather_very_hot.csv
sa/weather_scenarios/source/: mean_data_hot_35.csv  mean_data_hot_37.csv  mean_data_hot_38_40.csv  mean_data_hot_45.csv
script/: coorection_transformations_digitFUNCTION.R  photosynthesis_curves.py  test_sensitivity.R
sim/: analysis.py  config.py  main.py  main_preprocess.py  main_sim.py  params_default.json
sim_vsp/: analysis.py  combinaison_analyses_sensitivite.csv  config.py  main_preprocess.py  main_sim.py  params.json  pour_mathilde.py  utils.py
src/archi_panel/: utils.py
src/archi_panel/simulator/: hydroshoot_wrapper.py  initialisation_twins.py
(+102 files in other folders)
